# notes

./: CMakeLists.txt  Makefile  Notes.files  compile.sh  readme.txt
include/: cli.hpp  core.hpp  core_action.hpp  core_service.hpp  crypto.hpp  record.hpp  response.hpp  return_code.hpp  util.hpp
lib/boost/linux/x64/stage/lib/: libboost_date_time.so.1.63.0  libboost_serialization.so.1.63.0  libboost_wserialization.so.1.63.0
lib/cryptopp/cryptopp/: socketft.cpp
src/: cli.cpp  core.cpp  core_action.cpp  core_service.cpp  crypto.cpp  main.cpp  record.cpp  response.cpp  util.cpp
